--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<embed src="https://github.com/gippoo/gippoo.github.io/raw/master/resume.pdf" width="100%" height="3000px" 
- type="application/pdf">
+<embed src="https://drive.google.com/viewerng/
+viewer?embedded=true&url=https://github.com/gippoo/resume/raw/master/resume.pdf" width="750" height="1000">
 
 </body>
 </html>
