--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 
 <div class="content">
 <center>
-<embed src="https://drive.google.com/viewerng/
-viewer?embedded=true&url=https://github.com/gippoo/resume/raw/master/resume.pdf" width="750" height="1000">
+<embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/gippoo/resume/raw/master/resume.pdf" width="750" height="1000">
 </center>
 </div>
 
