--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
     body {
         font-family: "Trebuchet MS";
+        color: white;
     }
 
     a:link {
@@ -67,9 +68,9 @@
 </div>
 
 <div class="content">
-<center>
-<embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/gippoo/resume/raw/master/resume.pdf" width="750" height="1000">
-</center>
+    <center>
+        <embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/gippoo/resume/raw/master/resume.pdf" width="750" height="1000">
+    </center>
 </div>
 
 </body>
