--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="header">
     <div class="title_text">
     	<a class="header" href="https://gippoo.github.io/" style="text-decoration:none;">Gary Ip</a> | 
-        <a class="header" href="https://gippoo.github.io/resume/" target="_blank" style="text-decoration:none;">Resume</a> | 
+        Resume | 
         <a class="header" href="https://github.com/gippoo" style="text-decoration:none;">GitHub</a>
     </div>
 </div>
