--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <div class="title_text">
     	<a class="header" href="https://gippoo.github.io/" style="text-decoration:none;">Gary Ip</a> | 
         Resume | 
-        <a class="header" href="https://github.com/gippoo" style="text-decoration:none;">GitHub</a>
+        <a class="header" href="https://github.com/gippoo" style="text-decoration:none;">GitHub</a> | 
+        <a class="header" href="https://www.linkedin.com/in/gary-ip27/" style="text-decoration:none;">LinkedIn</a>
     </div>
 </div>
 
